--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,17 @@ node_js:
 os:
   - osx
   - linux
+addons:
+  apt:
+    packages:
+    - rpm
+    - fakeroot
+before_install:
+  # 2016-10: Apple doesn't include openssl any more because of security
+  # problems openssl had. Manually specify path to includes/libs.
+  - if [ "$TRAVIS_OS_NAME" = osx ]; then brew install openssl; fi
+  - if [ "$TRAVIS_OS_NAME" = osx ]; then export CPPFLAGS="-I/usr/local/opt/openssl/include"; fi
+  - if [ "$TRAVIS_OS_NAME" = osx ]; then export LDFLAGS="-L/usr/local/opt/openssl/lib"; fi
 install:
   - npm install -g electron-forge
   - npm install
