--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,7 +9,7 @@ init:
   - git config --global core.autocrlf input
 
 install:
-  - ps: Install-Product node 7 x64
+  - ps: Install-Product node Current x64
   - npm install npm -g
   - npm install -g electron-forge
   - npm install
