--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,8 +15,7 @@ install:
   - npm install
 
 deploy_script:
-  - if ($env:APPVEYOR_REPO_TAG -ne "true") { return }
-  - npm run publish
+  - if ($env:APPVEYOR_REPO_TAG_NAME) { npm run publish }
 
 test: off
 build: off
