--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,7 +15,7 @@ install:
   - npm install
 
 deploy_script:
-  - ps: IF ($env:APPVEYOR_REPO_TAG_NAME) { npm run publish }
+  - IF DEFINED APPVEYOR_REPO_TAG_NAME (npm run publish)
 
 test: off
 build: off
