--- a/package.json
+++ b/package.json
@@ -21,18 +21,20 @@
           "squirrel"
         ],
         "darwin": [
-          "zip"
+          "dmg"
         ],
         "linux": [
           "deb"
         ]
       },
       "electronPackagerConfig": {
-        "asar": true
+        "asar": true,
+        "osxSign": true
       },
       "electronWinstallerConfig": {
         "name": "electron_example"
       },
+      "electronInstallerDMG": {},
       "electronInstallerDebian": {},
       "electronInstallerRedhat": {},
       "github_repository": {
@@ -46,21 +48,17 @@
     }
   },
   "dependencies": {
-    "electron-compile": "^6.4.3",
+    "electron-compile": "^6.4.4",
     "electron-is-dev": "^1.0.1",
     "electron-squirrel-startup": "^1.0.0",
     "log-to-file": "^1.3.0"
   },
   "devDependencies": {
-    "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "electron-forge": "^5.2.3",
+    "electron-forge": "^5.2.4",
     "electron-prebuilt-compile": "3.0.10",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.1.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^5.1.1",
-    "eslint-plugin-react": "^7.11.1"
+    "eslint-plugin-import": "^2.16.0"
   }
 }
