--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ script:
   - npm test
 
 before_deploy:
-  - if [ "$TRAVIS_OS_NAME" = osx ]; then ./add-osx-certs.sh; fi
+  - if [ "$TRAVIS_OS_NAME" = osx ]; then ./add-osx-cert.sh; fi
 
 deploy:
   provider: script
