--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "electron-example",
   "productName": "electron-example",
-  "version": "0.0.18",
+  "version": "0.0.19",
   "description": "My Electron application description",
   "main": "src/index.js",
   "scripts": {
@@ -21,7 +21,8 @@
           "squirrel"
         ],
         "darwin": [
-          "dmg"
+          "dmg",
+          "zip"
         ],
         "linux": [
           "deb"
