--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,7 +15,7 @@ install:
   - npm install
 
 deploy_script:
-  - echo %CERTIFICATE_WINDOWS_PFX% | base64.exe --decode > example-electron.pfx
+  - echo %CERTIFICATE_WINDOWS_PFX% | base64.exe -di > example-electron.pfx
   - npm run make
   - signtool /pa ".\out\make\squirrel.windows\x64\electron-example-0.0.21 Setup.exe"
   - IF DEFINED APPVEYOR_REPO_TAG_NAME (npm run publish)
