--- a/package.json
+++ b/package.json
@@ -18,16 +18,18 @@
     "forge": "./forge.config.js"
   },
   "dependencies": {
-    "electron-compile": "^6.4.4",
-    "electron-is-dev": "^1.0.1",
+    "electron-is-dev": "^1.2.0",
     "electron-squirrel-startup": "^1.0.0",
     "log-to-file": "^1.3.0"
   },
   "devDependencies": {
+    "@electron-forge/cli": "^6.0.0-beta.54",
+    "@electron-forge/maker-deb": "^6.0.0-beta.54",
+    "@electron-forge/maker-dmg": "^6.0.0-beta.54",
+    "@electron-forge/maker-squirrel": "^6.0.0-beta.54",
+    "@electron-forge/publisher-github": "^6.0.0-beta.54",
     "babel-preset-env": "^1.7.0",
     "electron": "^11.1.0",
-    "electron-forge": "^5.2.4",
-    "electron-prebuilt-compile": "3.0.10",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.1.0",
     "eslint-plugin-import": "^2.16.0"
