Update electron-forge (#17)
* Update electron-forge

* update nodejs version in travis

* Fix appveyor

* Fix path

* Change appeveyor image

* not working

* Fix stuffs!

Co-authored-by: Lola Rigaut-Luczak <me@lola.ninja>

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,3 +1,6 @@
+image:
+  - Visual Studio 2019
+
 platform:
   - x64
 
@@ -11,7 +14,6 @@ init:
 install:
   - ps: Install-Product node Current x64
   - npm install npm -g
-  - npm install -g electron-forge
   - npm install
 
 deploy_script:
