--- a/.github/workflows/daily_release.yml
+++ b/.github/workflows/daily_release.yml
@@ -17,4 +17,9 @@ jobs:
           git config --local user.name "bot"
           git add .
           git commit -m "Bump version"
-          git push origin misc/v0.0.25
+          #git push origin master
+      - name: Create tag
+        run: |
+          export VERSION=v$(node -e "console.log(require('./package.json').version);")
+          git tag $VERSION
+
