fix typo in forge config file

--- a/.github/workflows/daily_release.yml
+++ b/.github/workflows/daily_release.yml
@@ -1,6 +1,9 @@
 name: Daily-Release
 
 on: push
+  #schedule:
+    # * is a special character in YAML so you have to quote this string
+    #- cron:  '*/30 5,17 * * *'
 
 jobs:
   daily-release:
