--- a/.travis.yml
+++ b/.travis.yml
@@ -14,12 +14,13 @@ addons:
 before_install:
   # 2016-10: Apple doesn't include openssl any more because of security
   # problems openssl had. Manually specify path to includes/libs.
+  - if [ "$TRAVIS_OS_NAME" = osx ]; then softwareupdate --all --install --force; fi
   - if [ "$TRAVIS_OS_NAME" = osx ]; then brew install openssl; fi
   - if [ "$TRAVIS_OS_NAME" = osx ]; then export CPPFLAGS="-I/usr/local/opt/openssl/include"; fi
   - if [ "$TRAVIS_OS_NAME" = osx ]; then export LDFLAGS="-L/usr/local/opt/openssl/lib"; fi
 
 install:
-  - npm install -g electron-forge
+  - npm i -g @electron-forge/cli
   - npm install
 script:
   - npm test
@@ -32,6 +33,6 @@ before_deploy:
 deploy:
   provider: script
   skip_cleanup: true
-  script: electron-forge publish
+  script: npm run publish
   on:
     tags: true
