--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ before_install:
   # 2016-10: Apple doesn't include openssl any more because of security
   # problems openssl had. Manually specify path to includes/libs.
   - if [ "$TRAVIS_OS_NAME" = osx ]; then softwareupdate --all --install --force; fi
-  - if [ "$TRAVIS_OS_NAME" = osx ]; then brew install openssl; fi
+  - if [ "$TRAVIS_OS_NAME" = osx ]; then brew install --verbose openssl; fi
   - if [ "$TRAVIS_OS_NAME" = osx ]; then export CPPFLAGS="-I/usr/local/opt/openssl/include"; fi
   - if [ "$TRAVIS_OS_NAME" = osx ]; then export LDFLAGS="-L/usr/local/opt/openssl/lib"; fi
 
