--- a/.github/workflows/daily_release.yml
+++ b/.github/workflows/daily_release.yml
@@ -1,9 +1,9 @@
 name: Daily-Release
 
-on: push
-  #schedule:
+on:
+  schedule:
     # * is a special character in YAML so you have to quote this string
-    #- cron:  '*/30 5,17 * * *'
+    - cron:  '0 18 * * *'
 
 jobs:
   daily-release:
