--- a/.github/workflows/create_realease.yml
+++ b/.github/workflows/create_realease.yml
@@ -13,10 +13,12 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+      - name: Get version
+        run: |
+          echo 'VERSION='v$(node -e "console.log(require('./package.json').version);") >> $GITHUB_ENV
       - name: Create release
         uses: actions/create-release@v1
         env:
-          VERSION: v$(node -e "console.log(require('./package.json').version);")
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
         with:
           tag_name: ${{ env.VERSION }}
