Looks like it is ok

--- a/.github/workflows/create_realease.yml
+++ b/.github/workflows/create_realease.yml
@@ -1,9 +1,9 @@
 name: Create-Release
 
-on: push
-  #schedule:
+on:
+  schedule:
     # * is a special character in YAML so you have to quote this string
-    #- cron:  '0 19 * * *'
+    - cron:  '0 19 * * *'
 
 jobs:
   create-release:
