--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
-    "lint": "eslint src --color"
+    "lint": "eslint src --color",
+    "test": "ava"
   },
   "keywords": [],
   "author": "lola",
@@ -30,6 +31,8 @@
     "@electron-forge/maker-squirrel": "^6.0.0-beta.54",
     "@electron-forge/maker-zip": "^6.0.0-beta.54",
     "@electron-forge/publisher-github": "^6.0.0-beta.54",
+    "ava": "^3.15.0",
+    "axios": "^0.21.1",
     "babel-preset-env": "^1.7.0",
     "electron": "^11.1.0",
     "eslint": "^3.19.0",
