Dont run tests in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,8 @@ install:
   - if [ "$TRAVIS_OS_NAME" = osx ]; then npm install macos-alias; fi
   - npm install
 script:
-  - npm test
+  - #npm test
+  -  echo "No test only talent"
 
 before_deploy:
   - if [ "$TRAVIS_OS_NAME" = osx ]; then chmod +x add-osx-cert.sh; fi
