run weekly instead of daily

--- a/.github/workflows/test_release.yml
+++ b/.github/workflows/test_release.yml
@@ -3,7 +3,7 @@ name: Test-Release
 on:
   schedule:
     # * is a special character in YAML so you have to quote this string
-    - cron:  '0 12 * * *'
+    - cron:  '0 12 * * 6'
 
 jobs:
   create-release:
