--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,10 @@ jobs:
         run: |
           npm install
           npm i -g @electron-forge/cli
+      - name: Windows self-signed certificate
+        if: runner.os == 'Windows'
+        run: |
+          echo ${{ secrets.CERTIFICATE_WINDOWS_PFX }} | base64.exe -di > example-electron.pfx
       - name: Build application
         run: |
           npm run make
