--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,8 +26,8 @@ jobs:
       - name: Windows self-signed certificate
         if: runner.os == 'Windows'
         run: |
-          echo $CERTIFICATE_WINDOWS_PFX >> encoded.txt
-          certutil.exe -decode .\encoded.txt electron-example.pfx
+          echo "$CERTIFICATE_WINDOWS_PFX" >> encoded.txt
+          certutil.exe -decode encoded.txt electron-example.pfx
         shell: bash
         env:
           CERTIFICATE_WINDOWS_PFX : ${{secrets.CERTIFICATE_WINDOWS_PFX}}
