test macos build

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,6 +31,16 @@ jobs:
         shell: bash
         env:
           CERTIFICATE_WINDOWS_PFX : ${{secrets.CERTIFICATE_WINDOWS_PFX}}
+      - name: macOS certificate
+        if: runner.os == 'macOS'
+        run: |
+          sudo xcode-select -r
+          npm install macos-alias
+          chmod +x add-osx-cert.sh
+          ./add-osx-cert.sh
+        shell: bash
+        env:
+          CERTIFICATE_WINDOWS_PFX : ${{secrets.CERTIFICATE_WINDOWS_PFX}}
       - name: Build application
         run: |
           npm run make
