--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,5 +43,10 @@ jobs:
           CERTIFICATE_PASSWORD : ${{secrets.CERTIFICATE_PASSWORD}}
       - name: Build application
         run: |
+          echo $APPLE_TEAM_ID
           npm run make
           ls
+        env:
+          APPLE_ID : ${{secrets.APPLE_ID}}
+          APPLE_ID_PASSWORD : ${{secrets.APPLE_ID_PASSWORD}}
+          APPLE_TEAM_ID : ${{secrets.APPLE_TEAM_ID}}
