--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
-    "lint": "eslint src --color",
     "test": "ava"
   },
   "keywords": [],
@@ -20,6 +19,7 @@
     "forge": "./forge.config.js"
   },
   "dependencies": {
+    "electron": "^23.1.0",
     "electron-is-dev": "^1.2.0",
     "electron-squirrel-startup": "^1.0.0",
     "log-to-file": "^1.3.0"
@@ -31,12 +31,8 @@
     "@electron-forge/maker-squirrel": "^6.0.0-beta.63",
     "@electron-forge/maker-zip": "^6.0.0-beta.63",
     "@electron-forge/publisher-github": "^6.0.0-beta.63",
-    "ava": "^3.15.0",
+    "ava": "^5.2.0",
     "axios": "^0.21.1",
-    "babel-preset-env": "^1.7.0",
-    "electron": "^19.0.1",
-    "eslint": "^3.19.0",
-    "eslint-config-airbnb": "^15.1.0",
-    "eslint-plugin-import": "^2.16.0"
+    "babel-preset-env": "^1.7.0"
   }
 }
