--- a/.github/workflows/create_realease.yml
+++ b/.github/workflows/create_realease.yml
@@ -3,7 +3,7 @@ name: Create-Release
 on:
   schedule:
     # * is a special character in YAML so you have to quote this string
-    - cron:  '0 11 * * 6'
+    - cron:  '0 11 * * *'
 
 jobs:
   create-release:
