--- a/.github/workflows/daily_release.yml
+++ b/.github/workflows/daily_release.yml
@@ -3,7 +3,7 @@ name: Weekly-Release
 on:
   schedule:
     # * is a special character in YAML so you have to quote this string
-    - cron:  '0 10 * * 6'
+    - cron:  '0 10 * * *'
 
 jobs:
   daily-release:
