--- a/.github/workflows/daily_release.yml
+++ b/.github/workflows/daily_release.yml
@@ -1,9 +1,13 @@
 name: Daily-Release
 
+# on:
+#   schedule:
+#     # * is a special character in YAML so you have to quote this string
+#     - cron:  '0 10 * * *'
+
 on:
-  schedule:
-    # * is a special character in YAML so you have to quote this string
-    - cron:  '0 10 * * *'
+  push:
+    - 'main'
 
 jobs:
   daily-release:
