back on schedule

--- a/.github/workflows/daily_release.yml
+++ b/.github/workflows/daily_release.yml
@@ -1,13 +1,9 @@
 name: Daily-Release
 
-# on:
-#   schedule:
-#     # * is a special character in YAML so you have to quote this string
-#     - cron:  '0 10 * * *'
 on:
-  push:
-    branches:
-      - main
+  schedule:
+    # * is a special character in YAML so you have to quote this string
+    - cron:  '0 10 * * *'
 
 jobs:
   daily-release:
