--- a/.github/workflows/create_realease.yml
+++ b/.github/workflows/create_realease.yml
@@ -1,9 +1,9 @@
 name: Create-Release
 
-on:
-  schedule:
-    # * is a special character in YAML so you have to quote this string
-    - cron:  '0 11 * * *'
+# on:
+#   schedule:
+#     # * is a special character in YAML so you have to quote this string
+#     - cron:  '0 11 * * *'
 
 jobs:
   create-release:
