--- a/.github/workflows/daily_release.yml
+++ b/.github/workflows/daily_release.yml
@@ -1,9 +1,9 @@
 name: Daily-Release
 
-on:
-  schedule:
-    # * is a special character in YAML so you have to quote this string
-    - cron:  '0 10 * * *'
+# on:
+#   schedule:
+#     # * is a special character in YAML so you have to quote this string
+#     - cron:  '0 10 * * *'
 
 jobs:
   daily-release:
@@ -15,19 +15,11 @@ jobs:
         uses: actions/checkout@v2
         with:
           token: ${{ secrets.MY_TOKEN }}
-      - name: Bump version
-        run: |
-          node script/bump_version.js
-          git config --local user.email "lola@update.rocks"
-          git config --local user.name "Lola action"
-          git add .
-          git commit -m "Bump version"
-          git push origin main
 
-      - name: Create tag
-        run: |
-          export VERSION=v$(node -e "console.log(require('./package.json').version);")
-          git tag $VERSION
-          git push origin $VERSION
+      # - name: Create tag
+      #   run: |
+      #     export VERSION=v$(node -e "console.log(require('./package.json').version);")
+      #     git tag $VERSION
+      #     git push origin $VERSION
 
 
