--- a/.github/workflows/test_release.yml
+++ b/.github/workflows/test_release.yml
@@ -1,9 +1,9 @@
 name: Test-Release
 
 on:
-#   schedule:
-#     # * is a special character in YAML so you have to quote this string
-#     - cron:  '0 12 * * *'
+  schedule:
+    # * is a special character in YAML so you have to quote this string
+    - cron:  '0 12 * * *'
 
 jobs:
   create-release:
